Fix ShardRegistry::Time definition

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0
    • CAR Team 2024-08-05, CAR Team 2024-08-19
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Note: this ticket was reverted for 8.1 and 8.0.6 due to SERVER-101739
      Currently, the Time definition of the ShardRegistry has some flaws:

      • no total order: potential causal consistency breakage (timeInStore overwriting a newer topologyTime).
      • Null topologyTime cause the topologyTime component to be ignored. In the absence of forceReloads or rsmIncrements, the topologyTime in VectorClock never advances timeInStore.

      The Time definition should be reworked to address these issues.

            Assignee:
            Yujin Kang Park
            Reporter:
            Yujin Kang Park
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: