SERVER-93101 Fix ShardRegistry::Time definition (#25622)

GitOrigin-RevId: 00477adc1875a214f5fcb6c1cd4f2e0c76368ed8