src/mongo/db/s/config_server_op_observer.h
@@ -94,9 +94,6 @@ public:
 
     void onMajorityCommitPointUpdate(ServiceContext* service,
                                      const repl::OpTime& newCommitPoint) override;
-
-private:
-    void _tickTopologyTimeIfNecessary(ServiceContext* service, Timestamp newCommitPointTime);
 };
 
 }  // namespace mongo
